# remunedata-api

./: .env.example  .env.example.production  .gitignore  Dockerfile  Makefile  PROJECT.md  README.md  TESTING.md  alembic.ini  celerybeat-schedule  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  erro-pipeline.txt  metrics_report.md  pyproject.toml  scheduler-ro08gg8c0o44wso444sgk0o8-003644668712-all-logs-2026-03-20-00-38-24.txt  tox.ini
.github/workflows/: cd-main.yml  ci-staging.yml
alembic/: env.py  script.py.mako
alembic/versions/: 20260319_0238_9da4280dfe05_initial_schema_v2.py  20260319_1214_387bb497cced_initial_schema.py  20260319_1228_245026308d91_add_index_nome_orgao.py  20260324_0038_aa16e3afff99_enable_unaccent_extension.py  20260324_1220_b3f1a9e2c501_add_subscription_tables.py
app/: main.py
app/api/: deps.py  router.py  schemas.py
app/collector/: annual.py  monthly.py
app/core/: auth.py  cache.py  celery_app.py  config.py  logging.py
app/infra/: abacatepay_client.py  transparencia_client.py
app/persistence/: admin_repository.py  models.py  session.py  (+1 more)
docs/: 01-descoberta-da-fonte-de-dados.md  02-contrato-da-fonte.md  03-validacao-da-chamada-minima.md  04-validacao-da-paginacao.md  05-validacao-do-limite-de-size.md  06-validacao-do-filtro-por-nome.md  07-validacao-do-filtro-por-cpf.md  08-validacao-da-ordenacao-padrao.md  09-validacao-do-fim-da-paginacao.md  10-validacao-da-estrategia-anual.md  11-algoritmo-minimo-da-coleta.md  12-contrato-minimo-do-coletor.md  13-modelo-minimo-de-persistencia.md  14-estrutura-minima-do-projeto.md  15-stack-minimo-e-bootstrap.md  cicd.md  coolify-setup.md  environment-strategy.md  security-hardening.md
scripts/: test_es256_validation.py  verify_admin_access.py
tests/: conftest.py  test_abacatepay_coverage.py  test_admin.py  test_annual_collector.py  test_api.py  test_auth.py  test_compliance.py  test_config.py  test_coverage_boost.py  test_coverage_boost_v2.py  test_duplication.py  test_export.py  test_final_coverage.py  test_health.py  test_improvements.py  test_monthly_collector.py  test_persistence.py  test_repositories.py  test_resilience.py  test_scheduler.py  test_subscriptions.py  test_super_nitro.py  test_transparencia_client.py  test_worker.py
(+14 files in other folders)
