[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "df-remuneration-collector"
version = "0.1.0"
description = "RPA para coleta de dados de remuneração dos servidores do DF no Portal da Transparência"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # HTTP
    "httpx>=0.27.0",
    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    # Validação e configuração
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Banco de dados
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    # Cache / Fila
    "redis>=5.0.0",
    "celery[redis]>=5.4.0",
    # Exportação
    "pandas>=2.2.0",
    "openpyxl>=3.1.0",
    "PyJWT[crypto]>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "coverage[toml]>=7.5.0",
    "tox>=4.15.0",
    "black>=24.4.0",
    "isort>=5.13.0",
    "ruff>=0.4.0",
    "respx>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ─── pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

# ─── coverage ─────────────────────────────────────────────────────────────────
[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 86
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

# ─── black ────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 100
target-version = ["py312"]

# ─── isort ────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 100

# ─── ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
